# chest-xray-pneumonia-detector

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .yamllint.yml  ADVANCED_DEPLOYMENT_GUIDE.md  AI_GOVERNANCE.md  API_USAGE_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_GEN4_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_QUANTUM_SDLC_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SESSION_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_IMPLEMENTATION_SUMMARY.md  CHECKPOINT_IMPLEMENTATION_SUMMARY.md  CITATION.cff  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGIES.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.production  Dockerfile.quantum  ENHANCED_DEPLOYMENT_SUMMARY.md  ENHANCED_PRODUCTION_GUIDE.md  FINAL_AUTONOMOUS_SDLC_REPORT.md  GENERATION_4_IMPLEMENTATION_SUMMARY.md  GITHUB_WORKFLOWS_TODO.md  Makefile  OBSERVABILITY.md  (+79 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md  renovate.json  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security-vulnerability.yml
.github/workflows/: cd-production.yml  ci-comprehensive.yml  ci.yml  dependency-updates.yml  release.yml  retrain_model.yml  security-scan.yml  semantic-release.yml
.terragon/: continuous-execution.py  execution-log.json  scoring-engine.py  value-config.yaml  value-metrics.json
api/: openapi.yaml
audit_logs/: integrity.hash
deployment_artifacts/: build_manifest.json  configmap.yaml  deployment.yaml  deployment_report_prod-deploy-1755261391.json  deployment_report_quantum-medical-production-1755472262.json  deployment_verification.json  final_deployment_results.json  hpa.yaml  ingress.yaml  integration_test_results.json  monitoring_config.json  network_policy.yaml  production_deployment.json  registry_info.json  secret.yaml  security_scan_results.json  service.yaml  staging_deployment.json  traffic_config.json
docker/: healthcheck.py  init-db.sql  mongo-init.js  prometheus.yml
docs/: DEVELOPMENT.md  PROJECT_CHARTER.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-architecture-decision-record-format.md  0002-tensorflow-as-ml-framework.md  0003-fastapi-for-model-serving.md  001-architecture-decision-records.md  002-tensorflow-keras-framework.md  003-modular-cli-architecture.md
docs/api/: README.md
docs/guides/: deployment.md  developer-guide.md  quick-start.md  user-guide.md
docs/runbooks/: incident-response.md  operational-procedures.md  troubleshooting.md
docs/status/: autonomous_session_2025_07_23.md  autonomous_session_2025_07_24_second.md  autonomous_session_2025_07_25.md  autonomous_session_2025_07_25_second.md  autonomous_session_2025_07_26.md  autonomous_session_2025_07_26_second.md
health_data/: health_report.json
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  production-deployment.yaml  quantum-deployment.yaml  service.yaml
kubernetes/: production-deployment.yaml
logs/: retention-policy.txt
mlops/: model-governance.yaml
monitoring/: advanced-alerts.yml  advanced-dashboard.json  alert_rules.yml  apm-config.yaml  grafana-dashboard.json  logging-config.yaml  prometheus.yml
scripts/: automated-model-deployment.py  build-security.sh  build.sh  deploy-production.sh  generate-sbom.sh  mlops-automation.py  quality_gates_runner.py  security-scan.sh  setup-dev.sh  update_version.py  verify-slsa-provenance.sh
security/: slsa-provenance.yaml
src/: adaptive_intelligence_orchestrator.py  adaptive_learning_scheduler.py  adaptive_load_balancer.py  adaptive_medical_research_engine.py  adaptive_quantum_medical_pipeline.py  adaptive_ui_framework.py  advanced_data_integrity_system.py  advanced_error_recovery.py  advanced_error_recovery_system.py  advanced_monitoring_alerting_system.py  advanced_monitoring_system.py  ai_driven_adaptive_optimization.py  architecture_review.py  autonomous_model_versioning.py  comprehensive_audit_logging_system.py  comprehensive_monitoring_system.py  comprehensive_research_validation_framework.py  comprehensive_security_framework.py  comprehensive_security_orchestrator.py  comprehensive_testing_validation_framework.py  comprehensive_validation.py  config.py  data_loader.py  data_split.py  dataset_stats.py  dependency_security_scan.py  distributed_ml_orchestrator.py  enhanced_quantum_optimization.py  enhanced_resilience_framework.py  evaluate.py  evaluate_model.py  federated_learning_coordinator.py  gen4_neural_quantum_fusion.py  global_compliance_framework.py  global_deployment_orchestrator.py  global_medical_compliance_framework.py  graceful_degradation_manager.py  grad_cam.py  image_utils.py  inference.py  (+37 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_add-integration-tests-for-cli-tools-and-data-pipelines.py  test_add-unit-tests-for-data-loading-and-preprocessing-modules.py  test_add-unit-tests-for-model-creation-and-training-modules.py  test_advanced_features.py  test_architecture_review.py  test_comprehensive_integration.py  test_config.py  test_coverage_config.py  test_data_loader.py  test_data_loader_types.py  test_data_split.py  test_data_split_stubbed.py  test_dataset_stats.py  test_dataset_stats_utils.py  test_dependency_security_scan.py  test_enhanced_quality_gates.py  test_enhanced_resilience_framework.py  test_evaluate.py  test_grad_cam.py  test_hipaa_audit_logging.py  test_image_utils.py  test_image_utils_integration.py  test_inference.py  test_input_validation.py  test_integration_e2e.py  test_medical_compliance_validator.py  test_model_architecture_validation.py  test_model_builder.py  test_model_registry.py  test_parsers_without_deps.py  test_performance_benchmark.py  test_predict_utils.py  test_quality_gates.py  test_quantum_deployment.py  test_quantum_medical_research_comprehensive.py  test_quantum_optimization.py  test_quantum_scheduler.py  test_quantum_security_framework.py  (+11 more)
(+108 files in other folders)
